<resources>
    <string name="app_name">ReservaYa!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigator">NavigatorActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_restaurantes">Ver Restaurantes</string>
    <string name="login">Iniciar Sesión</string>
    <string name="Restaurant">Restaurante</string>
    <string name="formato_fecha">" Fecha"</string>
    <string name="formato_hora">Hora</string>
    <string name="restaurante">Restaurante:</string>
    <string name="colonia">Colonia:</string>
    <string name="abre_a_las">Abre a las:</string>
    <string name="cierra_a_las">Cierra a las:</string>
    <string name="hacer_reservacion">HACER RESERVACION</string>
    <string name="btnReintentar">Reintentar</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrase_a">Contraseña</string>
    <string name="reg_strar">Regístrar</string>
    <string name="postres">Postres</string>
    <string name="bebidas">Bebidas</string>
    <string name="platillos">Platillos</string>
    <string name="entradas">Entradas</string>
    <string name="nav_reservaciones">Ver Reservaciones</string>
</resources>
