<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.itlp.registraya.MenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@drawable/tool4"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="MENU"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="#fff"
                android:textSize="13pt"
                tools:fontFamily="@font/amarante" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/c1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="#F00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/entradas"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="#F00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/platillos"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="#F00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bebidas"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/c4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:background="#F00" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/postres"
            android:textColor="#000" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/contTotal">

            <ListView
                android:id="@+id/Lista"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/btnReintentarContenedor2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnReintenetar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnReintentar"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminateTint="#F00"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contTotal"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/Total"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Total: $"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnReservar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="Reservar" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
