<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="mx.edu.itlp.registraya.Reservar">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@drawable/tool4"
        android:minHeight="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="RESERVA YA"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="#fff"
                android:textSize="13pt"
                tools:fontFamily="@font/amarante" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="115dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="105dp">

            <TextView
                android:id="@+id/NombreRestaurante"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Restaurant"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="#062743"
                android:textSize="13pt"
                tools:fontFamily="@font/amarante" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="105dp">

            <EditText
                android:id="@+id/et_mostrar_fecha_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/formato_fecha"
                android:inputType="date"
                android:theme="@style/TemaFecha"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageButton
                android:id="@+id/ib_obtener_fecha"
                android:layout_width="59dp"
                android:layout_height="59dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:src="@drawable/calendar"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="105dp">

            <EditText
                android:id="@+id/et_mostrar_hora_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/formato_hora"
                android:inputType="time"
                android:theme="@style/TemaFecha"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker" />

            <ImageButton
                android:id="@+id/ib_obtener_hora"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:background="@android:color/transparent"
                android:src="@drawable/reloj2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/et_mostrar_hora_picker"
                app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
                tools:ignore="ContentDescription"
                tools:scaleType="centerInside" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="105dp">

            <ExpandableListView
                android:id="@+id/lvExp"
                android:layout_width="198dp"
                android:layout_height="129dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="32dp"
                android:choiceMode="singleChoice" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegistrar"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="198dp"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_signup"
            android:clickable="true"
            android:padding="16dp"
            android:text="Reservar"
            android:textAllCaps="false"
            android:textColor="#062743"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="25dp"
            android:indeterminateTint="#F00"
            android:visibility="gone" />
      </LinearLayout>
    </ScrollView>

</LinearLayout>
